# Kalatori

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  deny.toml  mkdocs.yml  rustfmt.toml
.github/workflows/: _job-cargo-deny.yml  _job-cargo-test-coverage.yml  _job-cargo-test.yml  _job-clippy.yml  _job-docker-build.yml  _job-docs-deploy.yml  _job-fmt.yml  _job-github-release.yml  _job-integration-test.yml  _job-release-prepare.yml  _job-release-validate.yml  cargo-test.yml  kalatori-test.yml  merge-to-dev.yml  merge-to-main.yml  pr-to-dev.yml  pr-to-main.yml  release.yml  rust-cargo-deny.yml  rust-clippy.yml  rust-fmt.yml  semantic.yml  semantic_mantic.yml
chopsticks/: Dockerfile  docker-compose.yml  pd-ah-2.yml
client/: Cargo.toml
client/examples/: crud.rs  webhook.rs
client/src/: client.rs  lib.rs  middleware.rs  types.rs  utils.rs
client/src/middleware/: axum.rs
client/src/types/: api.rs  common.rs  invoice.rs  transaction.rs
configs/: asset-hub.toml  chain.json.ci  chain.json.example  chain.json.example_asset_hub  chain.json.example_testnets  chains.json.example  chopsticks-docker-wss.toml  chopsticks-docker.toml  chopsticks-kampela.toml  chopsticks.toml  database.json.ci  database.json.example  logger.json.example  one_inch.json.example  payments.json.ci  payments.json.example  secrets.json.example  seed.json.example  shop.json.example  testnets.toml  web_server.json.example
daemon/: Cargo.toml  build.rs
daemon/configs/: chains.json  database.json  one_inch.json  payments.json  secrets.json  shop.json  web_server.json
daemon/src/: api.rs  chain.rs  chain_client.rs  configs.rs  dao.rs  error.rs  expiration_detector.rs  handlers.rs  main.rs  state.rs  swaps.rs  types.rs  webhook_sender.rs
dev/: 404.html  index.html
dev/configuration/: index.html
dev/search/: search_index.json
docs/: index.md
docs/policies/: ci.md  flows.md
migrations/: 20250104000001_initial_schema.sql  20250202000001_add_swaps.sql  20250211000001_create_front_end_swaps.sql  20250615000001_add_polygon_chain.sql
src/: arguments.rs  chain.rs  chain_client.rs  configs.rs  dao.rs  database.rs  definitions.rs  error.rs  expiration_detector.rs  handlers.rs  legacy_types.rs  lib.rs  main.rs  runtime.rs  server.rs  signer.rs  sled_to_sqlite_migration.rs  state.rs  types.rs  utils.rs
src/api/: dev.rs  public.rs
src/chain/: definitions.rs  executor.rs  payout.rs  rpc.rs  tracker.rs  transfer_tracker.rs  utils.rs
src/chain_client/: asset_hub.rs  errors.rs  keyring.rs
src/dao/: error_parsing.rs  interface.rs  invoice.rs  payout.rs  refund.rs  transaction.rs
src/handlers/: health.rs  order.rs  public.rs  types.rs
src/types/: common.rs  invoice.rs  payout.rs  refund.rs  transaction.rs
src/utils/: logger.rs  logging.rs  shutdown.rs  task_tracker.rs
static/: index.html
tests/: docker-compose.yml
tools/: webhook-simulator.html
(+81 files in other folders)
