[workspace]
members = [
    "daemon",
    "client",
]
resolver = "3"

[workspace.package]
authors = [
	"Alexander Slesarev <slesarew@gmail.com>",
    	"Vova Lando <vova.lando@gmail.com>",
     	"Artyom Sheviakov <fluidcells@pm.me>",
]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Kalapaja/Kalatori"
keywords = ["substrate", "blockchain", "finance", "service", "middleware"]
categories = ["finance"]
exclude = [".github", "cliff.toml", "Dockerfile", "chopsticks/", "configs", "is_version_greater.sh", "/tests"]

[workspace.lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
rust_2018_idioms = "warn"
unused = "warn"

[workspace.lints.clippy]
allow_attributes = "deny"
cargo_common_metadata = "warn"
cast_possible_truncation = "warn"
ignored_unit_patterns = "warn"
# Having multiple module layout styles in a project can be confusing. Moreover, `mod.rs` files don't
# really harmonize with Git as they can be renamed back to self-named modules and Git fundamentally
# prone to poorly handle the file renaming that can result in their history erasure.
mod_module_files = "warn"
# TODO: we'll add docs and remove this later
